{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 218,
  "lineage": "e3e34544-240d-9442-8175-99207fad22ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06e3c045d79fd65d9",
            "arn": "arn:aws:ec2:us-east-2:380881224981:instance/i-03d1e5cf73c7a1cf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-03d1e5cf73c7a1cf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00fb2f19f039b960b"
              }
            ],
            "primary_network_interface_id": "eni-00fb2f19f039b960b",
            "private_dns": "ip-10-0-0-144.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.144",
            "public_ip": "3.14.248.246",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095ad3ae819950432",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0103019e06e60e0b7",
            "tags": {
              "Name": "web-server1"
            },
            "tags_all": {
              "Name": "web-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d26317052cde71e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "i-03d1e5cf73c7a1cf0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.deployer",
            "aws_security_group.lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06e3c045d79fd65d9",
            "arn": "arn:aws:ec2:us-east-2:380881224981:instance/i-03b172d9a3d9a31ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-03b172d9a3d9a31ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02efb01c8db013bef"
              }
            ],
            "primary_network_interface_id": "eni-02efb01c8db013bef",
            "private_dns": "ip-10-0-1-160.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.160",
            "public_ip": "16.59.61.237",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034871d1226c9aaa3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07133ef816e8753c2",
            "tags": {
              "Name": "web-server2"
            },
            "tags_all": {
              "Name": "web-server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d26317052cde71e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "i-03b172d9a3d9a31ef",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.deployer",
            "aws_security_group.lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:internet-gateway/igw-04a6c2c97053c9536",
            "id": "igw-04a6c2c97053c9536",
            "owner_id": "380881224981",
            "region": "us-east-2",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:loadbalancer/app/demo-lb/91a885e165c4e063",
            "arn_suffix": "app/demo-lb/91a885e165c4e063",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-lb-1758180827.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:380881224981:loadbalancer/app/demo-lb/91a885e165c4e063",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-lb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-08052260547a365f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0103019e06e60e0b7"
              },
              {
                "subnet_id": "subnet-07133ef816e8753c2"
              }
            ],
            "subnets": [
              "subnet-0103019e06e60e0b7",
              "subnet-07133ef816e8753c2"
            ],
            "tags": {
              "Name": "demo-lb"
            },
            "tags_all": {
              "Name": "demo-lb"
            },
            "vpc_id": "vpc-0a5a1d0f781fe171c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:loadbalancer/app/demo-lb/91a885e165c4e063"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:listener/app/demo-lb/91a885e165c4e063/396a0f30a1154b36",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:380881224981:listener/app/demo-lb/91a885e165c4e063/396a0f30a1154b36",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:loadbalancer/app/demo-lb/91a885e165c4e063",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:listener/app/demo-lb/91a885e165c4e063/396a0f30a1154b36"
          },
          "dependencies": [
            "aws_lb.demo-lb",
            "aws_lb_target_group.demo-target",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
            "arn_suffix": "targetgroup/demo-target/ae27fbe0556452c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-target"
            },
            "tags_all": {
              "Name": "demo-target"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-target-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4,i-03d1e5cf73c7a1cf0,80",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
            "target_id": "i-03d1e5cf73c7a1cf0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
            "target_id": "i-03d1e5cf73c7a1cf0"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.web-server1",
            "aws_key_pair.deployer",
            "aws_lb_target_group.demo-target",
            "aws_security_group.lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-target-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4,i-03b172d9a3d9a31ef,80",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
            "target_id": "i-03b172d9a3d9a31ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:380881224981:targetgroup/demo-target/ae27fbe0556452c4",
            "target_id": "i-03b172d9a3d9a31ef"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.web-server2",
            "aws_key_pair.deployer",
            "aws_lb_target_group.demo-target",
            "aws_security_group.lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:route-table/rtb-0b6568d7668feaa68",
            "id": "rtb-0b6568d7668feaa68",
            "owner_id": "380881224981",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a6c2c97053c9536",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-rt"
            },
            "tags_all": {
              "Name": "demo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "rtb-0b6568d7668feaa68",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092fc4c4b3630097a",
            "region": "us-east-2",
            "route_table_id": "rtb-0b6568d7668feaa68",
            "subnet_id": "subnet-0103019e06e60e0b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.RT1",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd5ef1dcbe8946ab",
            "region": "us-east-2",
            "route_table_id": "rtb-0b6568d7668feaa68",
            "subnet_id": "subnet-07133ef816e8753c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.RT1",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:security-group/sg-08052260547a365f1",
            "description": "Allow HTTP inbound traffic to LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08052260547a365f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "380881224981",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_lb"
            },
            "tags_all": {
              "Name": "allow_http_lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "sg-08052260547a365f1",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:security-group/sg-02d26317052cde71e",
            "description": "Allow SSH and HTTPinbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d26317052cde71e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08052260547a365f1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "380881224981",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "sg-02d26317052cde71e",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:subnet/subnet-0103019e06e60e0b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0103019e06e60e0b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380881224981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "demo-subnet1"
            },
            "tags_all": {
              "Name": "demo-subnet1"
            },
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "subnet-0103019e06e60e0b7",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:subnet/subnet-07133ef816e8753c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07133ef816e8753c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380881224981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "demo-subnet2"
            },
            "tags_all": {
              "Name": "demo-subnet2"
            },
            "vpc_id": "vpc-0a5a1d0f781fe171c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "subnet-07133ef816e8753c2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:380881224981:vpc/vpc-0a5a1d0f781fe171c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d466e41abe4d8c1",
            "default_route_table_id": "rtb-03fc262934602d413",
            "default_security_group_id": "sg-0bcf3bf47230a2681",
            "dhcp_options_id": "dopt-00a17b5d7b3023d2f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5a1d0f781fe171c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fc262934602d413",
            "owner_id": "380881224981",
            "region": "us-east-2",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380881224981",
            "id": "vpc-0a5a1d0f781fe171c",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}